crates/vizia_core/resources/themes/default_layout.css
/* ... */
button > *,
toggle-button > * {
    width: auto;
    alignment: center;
    horizontal-gap: 4px;
}

button svg,
toggle-button svg {
    size: 20px;
}

/* BUTTON GROUP */

button-group {
    layout-type: row;
    size: auto;
}

button-group.vertical {
    layout-type: column;
}

button-group.vertical > button,
button-group.vertical > toggle-button {
    width: 1s;
    min-width: auto;
    alignment: center;
}

/* CHECKBOX */

checkbox {
    width: 20px;
    height: 20px;
}

checkbox > svg {
    size: 1s;
}

/* CHIP */

chip {
    width: auto;
    height: 24px;
    padding-left: 8px;
    padding-right: 8px;
    alignment: center;
    gap: 4px;
    font-size: small;
}

chip.close {
    padding-left: 8px;
    padding-right: 4px;
}

chip > .close-icon {
    padding: 0px;
}

chip > .close-icon svg {
    size: 1s;
}

/* DATEPICKER */

calendar {
    width: auto;
    height: auto;
    padding: 12px;
    vertical-gap: 16px;
    alignment: center;
}

.calendar-controls {
    width: 1s;
    height: auto;
    alignment: center;
}

.calendar-controls .month-nav {
    width: 32px;
    height: 32px;
    alignment: center;
    padding: 12px;
}

.calendar-controls .month-nav svg {
    size: 16px;
}

.calendar-controls-select {
    width: 1s;
    height: auto;
    gap: 6px;
    alignment: center;
}

.calendar-controls select {
    width: auto;
    height: 32px;
    min-width: 74px;
}

.calendar-body {
    width: auto;
    height: auto;
    gap: 4px;
}

.calendar-header {
    alignment: center;
    height: auto;
}

.calendar-dow {
    alignment: center;
    width: 32px;
    height: 21px;
}

.calendar-day {
    width: 32px;
    height: 32px;
    alignment: center;
}

.calendar-day-disabled {
    width: 32px;
    height: 32px;
    alignment: center;
}

/* DIVIDER */

divider {
    width: 1s;
    height: 1px;
    alignment: center;
    padding: 2px;
}

divider.horizontal,
vstack > divider {
    width: 1s;
    height: auto;
}

divider.horizontal > .divider-line,
vstack > divider > .divider-line {
    width: 1s;
    height: 1px;
}

divider.vertical,
hstack > divider {
    height: 1s;
    width: auto;
}

divider.vertical > .divider-line,
hstack > divider > .divider-line {
    height: 1s;
    width: 1px;
}

/* DROPDOWN */

dropdown,
combobox {
    height: 32px;
}

dropdown {
    min-width: auto;
}

dropdown > * {
    width: 1s;
}

combobox .title {
    width: 1s;
    height: 1s;
    padding-left: 8px;
    padding-right: 8px;
    alignment: left;
    cursor: text;
}

popup {
    size: auto;
    min-width: 100%;
    left: 1s;
    right: 1s;
}

/* SIDEBAR */

sidebar {
    width: 280px;
    height: 1s;
}

sidebar > .sidebar-header {
    width: 1s;
    height: auto;
    padding: 8px;
}

sidebar > .sidebar-content {
    width: 1s;
    height: 1s;
}

sidebar > .sidebar-footer {
    width: 1s;
    height: auto;
    padding: 8px;
}

popup > list {
    width: 1s;
    min-width: auto;
    height: auto;
    max-height: 200px;
}

popup > list > scrollview {
    height: auto;
    max-height: 200px;
    width: 1s;
    min-width: auto;
}

popup > list > scrollview > scroll-content {
    height: auto;
    width: 1s;
    min-width: auto;
}

popup scrollview scrollbar.vertical {
    top: 4px;
    bottom: 4px;
    right: 2px;
}

.rtl popup scrollview scrollbar.vertical {
    left: 2px;
    right: 1s;
}

popup scrollview {
    width: 1s;
    min-width: auto;
}

popup list list-item {
    width: 1s;
    min-width: auto;
    height: 32px;
    padding-left: 6px;
    padding-right: 6px;
    alignment: left;
    gap: 4px;
    layout-type: row;
}

dropdown vstack,
combobox vstack {
    padding: auto;
}

/* ICON */

svg {
    size: auto;
}

/* IMAGE */

image {
    size: auto;
}

/* KNOB */

knob {
    size: 32px;
    corner-radius: 50%;
}

.knob-track {
    width: 1s;
    height: 1s;
}

.knob-head {
    width: 1s;
    height: 1s;
    layout-type: row;
    top: 2px;
    left: 2px;
    right: 2px;
    bottom: 2px;
    corner-radius: 50%;
    alignment: top-center;
}

.knob-tick {
    width: 2px;
    height: 8px;
}

/* LABEL */

label {
    size: auto;
    text-wrap: false;
    direction: auto;
}

/* LIST */

list {
    size: 1s;
}

list.horizontal {
    height: auto;
}

list.horizontal scrollview {
    height: auto;
}

list.horizontal scroll-content {
    layout-type: row;
    height: auto;
}

list list-item {
    min-width: auto;
    width: 1s;
    height: 30px;
    min-height: auto;
    alignment: left;
}

/* MENU */

menubar {
    size: auto;
}

menubutton {
    height: 32px;
    width: 1s;
    min-width: auto;
    padding-left: 8px;
    padding-right: 8px;
    alignment: left;
    gap: 8px;
}

menubutton > hstack,
submenu > hstack {
    height: auto;
    min-width: auto;
    alignment: left;
    gap: 8px;
}

submenu {
    height: 32px;
    width: 1s;
    min-width: auto;
    padding-left: 8px;
    /* padding-right: 8px; */
    alignment: left;
    gap: 1s;
    min-gap: 12px;
}

submenu submenu,
dropdown > popup > submenu {
    width: 1s;
}

submenu .icon,
menubutton .icon {
    size: 20px;
}

menubutton .shortcut {
    left: 1s;
}

/* submenu submenu label,
dropdown > popup > submenu label {
    alignment: center;
    size: 1s;
    width: 1s;
} */

submenu > popup {
    height: auto;
    width: auto;
    min-width: auto;
    padding: 8px;
}

submenu submenu > popup,
menubar submenu > popup {
    opacity: 0;
    display: none;
}

submenu submenu > popup:checked,
menubar submenu > popup:checked {
    opacity: 1;
    display: flex;
}

submenu submenu > popup,
menubar submenu > popup {
    top: 0px;
    left: 100%;
}

menubar > submenu {
    width: auto;
    padding-left: 12px;
    padding-right: 12px;
}

submenu > .arrow {
    display: none;
}

submenu submenu > .arrow,
menu submenu > .arrow {
    display: flex;
}

submenu > .arrow {
    size: 20px;
    left: 1s;
    right: 4px;
}

submenu divider {
    padding-top: 4px;
    padding-bottom: 4px;
}

/* PICKLIST */

select {
    width: auto;
    height: 32px;
    min-width: 64px;
}
/* ... */

